# NOCARES

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: paper-cycle.yml  rebalance-hourly.yml
config/: defaults.toml
dashboard/: __init__.py  app.py
docs/: 01-requisiti.md  02-architettura.md  03-risk-policy.md  04-roadmap.md  05-supabase-setup.md
instructions/: 00-project-charter.md  01-runtime-github-actions.md  02-market-data.md  03-indicators-and-signals.md  04-risk-and-paper-execution.md  05-supabase-storage.md  06-dashboard-streamlit.md  07-llm-portfolio-manager.md  08-testing-and-acceptance.md
src/nocares/: __init__.py  config.py  domain.py
src/nocares/allocation/: __init__.py  rules.py
src/nocares/bot/: __init__.py  cycle.py  rebalance.py  runner.py
src/nocares/llm/: __init__.py  guardrails.py  prompts.py  rebalance.py
src/nocares/market/: __init__.py  binance_client.py  indicators.py
src/nocares/risk/: __init__.py  paper_engine.py
src/nocares/storage/: __init__.py  in_memory.py  repository.py  supabase_repository.py
src/nocares/strategy/: __init__.py  pyramiding.py  regime.py  trailing_stop.py
supabase/migrations/: 001_initial_schema.sql  002_runtime_and_paper_tables.sql  003_pair_overrides.sql
tests/: test_allocation_rules.py  test_dashboard_smoke.py  test_market_indicators.py  test_overrides.py  test_paper_engine.py  test_storage_idempotency.py
