[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nocares"
version = "0.1.0"
description = "Local prototype for LLM-assisted crypto portfolio allocation and bot orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
runtime = [
  "openai>=1.0",
  "python-dotenv>=1.0",
  "supabase>=2.0",
]
dev = [
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
